# vexillum

./: CONTRIBUTING.md  Cargo.toml  LICENCE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: .env  Cargo.toml  Makefile  readme.md
apps/backend/migrations/: 20260102000000_init.sql
apps/backend/src/: config.rs  main.rs  state.rs
apps/backend/src/http/: auth.rs  health.rs  mod.rs
apps/backend/src/models/: api_keys.rs  audiences.rs  db.rs  enums.rs  environments.rs  feature_flags.rs  mod.rs  projects.rs  users.rs
apps/backend/src/pkg/: auth.rs  config.rs  error.rs  jwt.rs  keys.rs  mod.rs  response.rs  state.rs
apps/frontend/: eslint.config.js  package.json  pnpm-lock.yaml
apps/frontend/.react-router/types/: +routes.ts
apps/frontend/src/: App.tsx  index.css  main.tsx  root.tsx
apps/frontend/src/api/: index.ts
apps/frontend/src/layouts/: auth.tsx
apps/frontend/src/pages/: $.tsx  _index.tsx  not-found.tsx
apps/frontend/src/pages/auth/: login.tsx  magic.tsx  route.tsx
apps/frontend/src/pages/auth._index/: route.tsx
apps/frontend/src/pages/auth.login/: route.tsx
apps/frontend/src/pages/auth.magic/: route.tsx
apps/frontend/src/pages/dashboard/: route.tsx
apps/frontend/src/pages/dashboard/breadcrumbs/: index.ts  titles.ts
apps/frontend/src/state/: auth.ts
crates/pgmap/: Cargo.toml
crates/pgmap-derive/: Cargo.toml
crates/pgmap-derive/src/: lib.rs
crates/pgmap/src/: enums.rs  from_row.rs  lib.rs
infra/: Makefile  docker-compose.yml  pgadmin_servers.json
scripts/: dev.sh  genapi.ts  tsconfig.json
(+10 files in other folders)
