[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[dependencies]
axum = "0.8.8"
axum-macros = "0.5.0"
async-trait = "0.1.89"
tokio = { version = "1.49.0", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = [
    "with-serde_json-1",
    "with-chrono-0_4",
    "with-uuid-1",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
env_logger = "0.11.8"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
dotenvy = "0.15.7"
pgmap = { path = "../../crates/pgmap" }
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1", "serde"] }
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1", "serde"] }
argon2 = { version = "0.5.3", features = [] }
rand = "0.9.2"
postgres-types = { version = "0.2.11", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
thiserror = "2.0.17"
axum-extra = { version = "0.12.5", features = ["cookie", "with-rejection"] }
axum-auth = "0.8.1"
cookie = "0.18.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = "0.2.0"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tower = "0.5.1"
